base_css_js_carpetas

--- a/Landing.html
+++ b/Landing.html
@@ -6,14 +6,13 @@
     <title>Rick and Morty Wiki</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-</head>
+    </head>
 <body>
 
     <header class="container-fluid">
         <div class="row">
             <div class="col-12 text-center">
-                <img src="media/img/LogoRYM.png" alt="Rick and Morty Logo" class="img-fluid">
+                <img src="media/img/LogoRYM.png" alt="Rick y Morty Logo" class="img-fluid">
             </div>
         </div>
     </header>
@@ -45,6 +44,45 @@
         </div>
     </nav>
 
+    <main class="container mt-4">
+        <section class="row mb-4">
+            <div class="col-md-6 offset-md-0 col-lg-4 offset-lg-2 text-center">
+                <img src="media/img/RYMFoto1.png" alt="Rick and Morty Characters" class="img-fluid">
+            </div>
+             <div class="col-md-6 col-lg-4">
+                <article class="p-3 border rounded">
+                    <h2>HUOOOLAAA</h2>
+                    <p>
+                        ¿Te perdiste entre dimensiones? ¿No sabes diferenciar un Meeseeks de un Cronflomite? ¿Te preguntas cuántas veces hemos destruido la realidad solo este mes? Pues felicidades, has llegado al lugar correcto, y por "correcto" me refiero al menos peor opción dentro de este universo caótico.
+                    </p>
+                    <p class="text-end">-escrita y corregida (con resaca) por el mismísimo Rick C-137-</p>
+                    <div class="text-end mt-3">
+                         <img src="media/img/bateria.png" alt="bateria" style="width: 50px;">
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <section class="row mb-4 justify-content-center">
+            <div class="col-md-10 col-lg-8">
+                 <article class="p-3 border rounded">
+                    <p>Escuchen ... aquí MORTY, y sí, esta wiki es un lugar donde puedes encontrar toda la información de nuestras aventuras, ¡pero sin la arrogancia de Rick! Aquí puedes:</p>
+                    <ul>
+                        <li>Ver todos los EPISODIOS, información y esas cosas que se te escaparon mientras tratabas de no perder la cordura.</li>
+                        <li>Explorar a los PERSONAJES, desde Rick y yo hasta ... ese tipo con cara de galleta.</li>
+                        <li>Descubrir DIMENSIONES alternativas, planetas raros y los lugares más peligrosos a los que hemos ido (spoiler: casi todos).</li>
+                        <li>¡Y también toda nuestra información que no sabíamos dónde meter, y más cosas geniales.</li>
+                    </ul>
+                     <p>Y Rick, si vas a seguir hablando como si fueras el centro del multiverso ... puedes irte por un portal, ¿vale?</p>
+                     <p class="text-end">- Morty fuera.</p>
+                </article>
+            </div>
+        </section>
+
+        <section id="dynamic-content" class="row mt-4">
+            </section>
+
+    </main>
 
     <footer class="container-fluid mt-5 text-center">
         <p>© 2024 Rick and Morty Wiki (Hecho por Fans)</p>
