--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Rick and Morty Wiki</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     </head>
 <body>
 
@@ -25,19 +28,19 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="#">INICIO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Personajes</a>
+                        <a class="nav-link" href="Personajes.html">PERSONAJES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Episodios</a>
+                        <a class="nav-link" href="Episodios.html">EPISODIOS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Localizaciones</a>
+                        <a class="nav-link" href="Localizaciones.html">LOCALIZACIONES</a>
                     </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#">Otros</a>
+                        <a class="nav-link" href="Otros.html">OTROS</a>
                     </li>
                 </ul>
             </div>
