Cambios en UI muy ligeros
no hay mucha mejora pero tengo que irme a comer

--- a/Personajes.html
+++ b/Personajes.html
@@ -30,13 +30,16 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Inicio</a> </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="Personajes.html">Personajes</a> </li>
+                        <a class="nav-link active" aria-current="page" href="Personajes.html">PERSONAJES</a> </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Episodios.html">Episodios</a> </li>
+                        <a class="nav-link" href="Episodios.html">EPISIODIOS</a> </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Localizaciones.html">Localizaciones</a> </li>
+                        <a class="nav-link" href="Localizaciones.html">LOCALIZACIONES</a> </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Juego.html">JUEGO</a>
+                        </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Otros.html">Otros</a> </li>
+                        <a class="nav-link" href="Otros.html">OTROS</a> </li>
                 </ul>
             </div>
         </div>
