--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="Localizaciones.html">LOCALIZACIONES</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Juego.html">JUEGO</a>
+                    </li>
                      <li class="nav-item">
                         <a class="nav-link" href="Otros.html">OTROS</a>
                     </li>
