--- a/Personajes.html
+++ b/Personajes.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a> </li>
+                        <a class="nav-link" href="index.html">INICIO</a> </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="Personajes.html">PERSONAJES</a> </li>
                     <li class="nav-item">
@@ -38,8 +38,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="Juego.html">JUEGO</a>
                         </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Otros.html">OTROS</a> </li>
                 </ul>
             </div>
         </div>
