--- a/Localizaciones.html
+++ b/Localizaciones.html
@@ -42,6 +42,9 @@
                      <li class="nav-item">
                          <a class="nav-link" href="Juego.html">JUEGO</a>
                      </li>
+                     <li class="nav-item">
+                         <a class="nav-link" href="Otros.html">OTROS</a>
+                     </li>
                 </ul>
             </div>
         </div>
@@ -56,7 +59,16 @@
             </div>
         </section>
 
-        </main>
+        <div class="row mt-4">
+            <div class="col-12 d-flex justify-content-center">
+                <nav aria-label="Navegación de páginas de localizaciones">
+                    <ul class="pagination" id="locations-pagination">
+                        </ul>
+                </nav>
+            </div>
+        </div>
+
+    </main>
 
     <footer class="container-fluid mt-5 text-center">
         <p>© 2024 Rick and Morty Wiki (Hecho por Fans)</p>
