--- a/index.html
+++ b/index.html
@@ -85,6 +85,30 @@
         <section id="dynamic-content" class="row mt-4">
             </section>
 
+        <section class="row justify-content-center mt-5">
+  <div class="col-md-10 col-lg-8">
+    <article class="p-4 border rounded">
+      <h2 class="mb-4 text-center">¿Quieres contactarnos desde otra dimensión?</h2>
+      <form id="contacto-form">
+        <div class="mb-3">
+          <label for="nombre" class="form-label">Nombre</label>
+          <input type="text" class="form-control" id="nombre" required>
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Correo Electrónico</label>
+          <input type="email" class="form-control" id="email" required>
+        </div>
+        <div class="mb-3">
+          <label for="mensaje" class="form-label">Mensaje</label>
+          <textarea class="form-control" id="mensaje" rows="4" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-contacto w-100">Enviar al multiverso</button>
+        <p id="respuesta-form" class="mt-3 text-center"></p>
+      </form>
+    </article>
+  </div>
+</section>
+
     </main>
 
     <footer class="container-fluid mt-5 text-center">
