--- a/Episodios.html
+++ b/Episodios.html
@@ -9,10 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Share+Tech+Mono&display=swap" rel="stylesheet">
-    </head>
+</head>
 <body>
 
-    <header class="container-fluid d-none d-lg-block">
+    <header class="container-fluid">
         <div class="row">
             <div class="col-12 text-center">
                 <img src="media/img/LogoRYM.png" alt="Rick y Morty Logo" class="img-fluid">
@@ -22,71 +22,78 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <div class="d-flex justify-content-between align-items-center w-100 d-lg-none">
-                 <a class="navbar-brand" href="index.html">
-                    <img src="media/img/LogoRYM.png" alt="Rick y Morty Logo" class="navbar-logo-mobile">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">INICIO</a> </li>
+                        <a class="nav-link" href="index.html">INICIO</a>
+                    </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Personajes.html">PERSONAJES</a> </li>
+                        <a class="nav-link" href="Personajes.html">PERSONAJES</a>
+                    </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="Episodios.html">EPISODIOS</a> </li>
+                        <a class="nav-link active" aria-current="page" href="Episodios.html">EPISODIOS</a>
+                    </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Localizaciones.html">LOCALIZACIONES</a> </li>
+                        <a class="nav-link" href="Localizaciones.html">LOCALIZACIONES</a>
+                    </li>
                      <li class="nav-item">
-                         <a class="nav-link" href="Juego.html">JUEGO</a> </li>
+                         <a class="nav-link" href="Juego.html">JUEGO</a>
+                     </li>
+                     <li class="nav-item">
+                         <a class="nav-link" href="Otros.html">OTROS</a>
+                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <main class="container mt-4">
+        <h1 class="text-center mb-4">Temporadas y Episodios</h1>
 
-        <section class="row mb-4 justify-content-center">
-            <div class="col-md-10 col-lg-8">
-                <article class="p-3 border rounded">
-                    <h2 class="text-center">TEMPORADAS</h2>
-                    <div id="seasons-container" class="row mt-3 justify-content-center">
-                        <div class="col-6 col-sm-4 col-md-2 mb-3 d-grid gap-2">
-                             <button class="btn btn-outline-primary season-button" data-season="1">1ª Temporada</button>
-                        </div>
-                         <div class="col-6 col-sm-4 col-md-2 mb-3 d-grid gap-2">
-                             <button class="btn btn-outline-primary season-button" data-season="2">2ª Temporada</button>
-                        </div>
-                         <div class="col-6 col-sm-4 col-md-2 mb-3 d-grid gap-2">
-                             <button class="btn btn-outline-primary season-button" data-season="3">3ª Temporada</button>
-                        </div>
-                         <div class="col-6 col-sm-4 col-md-2 mb-3 d-grid gap-2">
-                             <button class="btn btn-outline-primary season-button" data-season="4">4ª Temporada</button>
-                        </div>
-                         <div class="col-6 col-sm-4 col-md-2 mb-3 d-grid gap-2">
-                             <button class="btn btn-outline-primary season-button" data-season="5">5ª Temporada</button>
-                        </div>
-                        <div class="col-6 col-sm-4 col-md-2 mb-3 d-grid gap-2">
-                            <button class="btn btn-outline-primary season-button" data-season="6">6ª Temporada</button>
-                       </div>
-                        <div class="col-6 col-sm-4 col-md-2 mb-3 d-grid gap-2">
-                            <button class="btn btn-outline-primary season-button" data-season="7">7ª Temporada</button>
-                       </div>
-                        </div>
-                </article>
-            </div>
-        </section>
-
-        <section class="row mt-4">
-            <div class="col-12">
-                 <h2 class="text-center mb-4">EPISODIOS</h2>
-                <div id="episodes-list">
-                    <p class="text-center">Selecciona una temporada para ver los episodios.</p>
+        <section id="seasons-container" class="row justify-content-center mb-5">
+            <div class="col-6 col-md-3 col-lg-2 mb-4">
+                <div class="card h-100 text-center season-card" data-season="1">
+                    <div class="card-body">
+                        <h5 class="card-title">Temporada 1</h5>
+                    </div>
                 </div>
+            </div>
+            <div class="col-6 col-md-3 col-lg-2 mb-4">
+                <div class="card h-100 text-center season-card" data-season="2">
+                    <div class="card-body">
+                        <h5 class="card-title">Temporada 2</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-md-3 col-lg-2 mb-4">
+                <div class="card h-100 text-center season-card" data-season="3">
+                    <div class="card-body">
+                        <h5 class="card-title">Temporada 3</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-md-3 col-lg-2 mb-4">
+                <div class="card h-100 text-center season-card" data-season="4">
+                    <div class="card-body">
+                        <h5 class="card-title">Temporada 4</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-md-3 col-lg-2 mb-4">
+                <div class="card h-100 text-center season-card" data-season="5">
+                    <div class="card-body">
+                        <h5 class="card-title">Temporada 5</h5>
+                    </div>
+                </div>
+            </div>
+            </section>
+
+        <section id="episodes-list" class="row mt-4">
+            <div class="col-12">
+                <p class="text-center">Cargando episodios, por favor espera...</p>
             </div>
         </section>
 
@@ -98,7 +105,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/script.js"></script>
     <script src="js/episodios.js"></script>
+
 </body>
 </html>
