--- a/index.html
+++ b/index.html
@@ -82,6 +82,47 @@
             </div>
         </section>
 
+        <section id="video-slider" class="container my-5">
+  <h2 class="text-center mb-4">Multiverso en Movimiento</h2>
+  <div class="slider-wrapper">
+    <button class="slider-btn left" aria-label="Anterior">◀</button>
+    <div class="slider-track">
+  <!-- Video embebido -->
+  <div class="slider-item">
+    <div class="video-wrapper">
+      <iframe src="https://www.youtube.com/embed/hl1U0bxTHbY" title="Opening" allowfullscreen></iframe>
+    </div>
+  </div>
+
+  <!-- Enlace con imagen -->
+  <div class="slider-item">
+    <div class="video-wrapper">
+      <a href="https://www.youtube.com/watch?v=RNQPOsqapFk" target="_blank">
+        <img src="media/img/video.jpg" alt="Todos los Rick y Morty">
+      </a>
+    </div>
+  </div>
+
+  <div class="slider-item">
+    <div class="video-wrapper">
+      <a href="https://www.youtube.com/watch?v=2RrBPa9LE1w" target="_blank">
+        <img src="media/img/rickymorty.jpg" alt="Rick y Morty">
+      </a>
+    </div>
+  </div>
+
+  <div class="slider-item">
+    <div class="video-wrapper">
+      <a href="https://www.youtube.com/watch?v=_AmndYw8WGQ" target="_blank">
+        <img src="media/img/TrailerRickyMorty.jpg" alt="Rick y Morty Trailer">
+      </a>
+    </div>
+  </div>
+</div>
+    <button class="slider-btn right" aria-label="Siguiente">▶</button>
+  </div>
+</section>
+
         <section id="dynamic-content" class="row mt-4">
             </section>
 
@@ -114,6 +155,8 @@
     <footer class="container-fluid mt-5 text-center">
         <p>© 2024 Rick and Morty Wiki (Hecho por Fans)</p>
     </footer>
+
+    <div id="pantalla-transicion"></div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
