--- a/Juego.html
+++ b/Juego.html
@@ -21,21 +21,27 @@
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
-          <li class="nav-item"><a class="nav-link" href="Personajes.html">PERSONAJES</a></li>
-          <li class="nav-item"><a class="nav-link" href="Episodios.html">EPISODIOS</a></li>
-          <li class="nav-item"><a class="nav-link" href="Localizaciones.html">LOCALIZACIONES</a></li>
-          <li class="nav-item"><a class="nav-link active" href="Juego.html">JUEGO</a></li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand d-lg-none" href="#">
+      <img src="media/img/LogoRYM.png" alt="Logo" class="navbar-logo-mobile">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+      data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav flex-wrap text-center">
+        <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
+        <li class="nav-item"><a class="nav-link" href="Personajes.html">PERSONAJES</a></li>
+        <li class="nav-item"><a class="nav-link" href="Episodios.html">EPISODIOS</a></li>
+        <li class="nav-item"><a class="nav-link" href="Localizaciones.html">LOCALIZACIONES</a></li>
+        <li class="nav-item"><a class="nav-link active" href="Juego.html">JUEGO</a></li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <!-- Contenido del juego -->
   <div class="contenedor-juego">
