--- a/Localizaciones.html
+++ b/Localizaciones.html
@@ -67,9 +67,11 @@
 
     </main>
 
-    <footer class="container-fluid mt-5 text-center">
-        <p>© 2024 Rick and Morty Wiki (Hecho por Fans)</p>
-    </footer>
+<footer class="container-fluid mt-5 text-center py-4">
+  <p>© 2024 Rick and Morty Wiki (Hecho por Fans)</p>
+  <p>Este sitio no está afiliado ni respaldado por Adult Swim o los creadores oficiales de <em>Rick and Morty</em>.</p>
+  <p>Datos obtenidos de la <a href="https://rickandmortyapi.com" target="_blank" rel="noopener noreferrer">Rick and Morty API</a>.</p>
+</footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
